# aruco-localizer

./: .gitignore  CMakeLists.txt  localizer.cpp  markers.cpp
source/: localizer.cpp  markers.cpp  render.cpp
